Add Account Info Page
Add account info page (allow mods of acct from view)
Adjust CreateAcctPage.qml minority

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>LoginPage.qml</file>
         <file>CreateAcctPage.qml</file>
         <file>TabView.qml</file>
+        <file>AcctInfoPage.qml</file>
     </qresource>
 </RCC>
