--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>CreateAcctPage.qml</file>
         <file>TabView.qml</file>
         <file>AcctInfoPage.qml</file>
+        <file>Feed1.qml</file>
     </qresource>
 </RCC>
