--- a/qml.qrc
+++ b/qml.qrc
@@ -26,5 +26,6 @@
         <file>local.png</file>
         <file>state.png</file>
         <file>Content.qml</file>
+        <file>x.png</file> 
     </qresource>
 </RCC>
